@@ -38,7 +38,7 @@
 			        </a>
 					<ul class="dropdown-menu">
 						<li class="sub-page"><a href="{% url 'pl-gallery-archive' %}">Date views</a></li>
-						<li class="sub-page"><a href="{% url 'pl-gallery-list' 1 %}">List views</a></li>
+						<li class="sub-page"><a href="{% url 'photologue-gallery-list' %}">List views</a></li>
 					</ul>
 				</li>
 			    <li class="photos dropdown">
@@ -47,7 +47,7 @@
 			        </a>
 					<ul class="dropdown-menu">
 						<li class="sub-page"><a href="{% url 'pl-photo-archive' %}">Date views</a></li>
-						<li class="sub-page"><a href="{% url 'pl-photo-list' 1 %}">List views</a></li>
+						<li class="sub-page"><a href="{% url 'photologue-photo-list' %}">List views</a></li>
 					</ul>
 				</li>
 		    </ul>
