@@ -22,6 +22,6 @@
     <p>No galleries were found.</p>
 {% endif %}
 
-<p><a href="{% url 'pl-gallery-list' 1 %}">View all galleries.</a></p>
+<p><a href="{% url 'photologue-gallery-list' %}">View all galleries.</a></p>
 
 {% endblock %}
