@@ -12,6 +12,6 @@
 {% endfor %}
 </ul>
 
-<p><a href="{% url 'pl-gallery-list' 1 %}">View all galleries.</a></p>
+<p><a href="{% url 'photologue-gallery-list' %}">View all galleries.</a></p>
 
 {% endblock %}
