@@ -1,3 +1,5 @@
+import warnings
+
 from django.conf import settings
 from django.views.generic.dates import ArchiveIndexView, DateDetailView, DayArchiveView, MonthArchiveView, YearArchiveView
 from django.views.generic.detail import DetailView
@@ -8,7 +10,6 @@ from .models import Photo, Gallery
 GALLERY_PAGINATE_BY = getattr(settings, 'PHOTOLOGUE_GALLERY_PAGINATE_BY', 20)
 
 if GALLERY_PAGINATE_BY != 20:
-    import warnings
     warnings.warn(
         DeprecationWarning('PHOTOLOGUE_GALLERY_PAGINATE_BY setting will be removed in Photologue 3.1'))
 
@@ -16,7 +17,6 @@ if GALLERY_PAGINATE_BY != 20:
 PHOTO_PAGINATE_BY = getattr(settings, 'PHOTOLOGUE_PHOTO_PAGINATE_BY', 20)
 
 if PHOTO_PAGINATE_BY != 20:
-    import warnings
     warnings.warn(
         DeprecationWarning('PHOTOLOGUE_PHOTO_PAGINATE_BY setting will be removed in Photologue 3.1'))
 
@@ -26,6 +26,14 @@ if PHOTO_PAGINATE_BY != 20:
 class GalleryListView(ListView):
     queryset = Gallery.objects.on_site().is_public()
     paginate_by = GALLERY_PAGINATE_BY
+
+    def get_context_data(self, **kwargs):
+        context = super(GalleryListView, self).get_context_data(**kwargs)
+        if self.kwargs.get('deprecated_pagination', False):
+            warnings.warn(
+                DeprecationWarning('Page numbers should now be passed via a page query-string parameter.'
+                                   ' The old style "/page/n/"" will be removed in Photologue 3.2'))
+        return context
 
 
 class GalleryDetailView(DetailView):
@@ -63,6 +71,14 @@ class GalleryYearArchiveView(GalleryDateView, YearArchiveView):
 class PhotoListView(ListView):
     queryset = Photo.objects.on_site().is_public()
     paginate_by = PHOTO_PAGINATE_BY
+
+    def get_context_data(self, **kwargs):
+        context = super(PhotoListView, self).get_context_data(**kwargs)
+        if self.kwargs.get('deprecated_pagination', False):
+            warnings.warn(
+                DeprecationWarning('Page numbers should now be passed via a page query-string parameter.'
+                                   ' The old style "/page/n/"" will be removed in Photologue 3.2'))
+        return context
 
 
 class PhotoDetailView(DetailView):
